--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,14 @@ a:hover {
     color: red;
 }
 
+.row {
+	width: 890px;
+}
+
 .col-sm-4 {
 	position:relative !important;
 	overflow:hidden !important;
+	padding-right: 0px !important;
 }
 
 .col-sm-4 img {
@@ -66,9 +71,10 @@ a:hover {
   width:100%;
   height: 60px;
   margin-top: 50px;
-  border-right: solid 15px white;
-  border-left: solid 15px white;
-  margin-left: -15px;
+  border-right: solid 3px white;
+  border-left: solid 3px white;
+  padding-right: 6px;
+  margin-left: -3px;
   background:red;
   bottom:-100px;
   opacity:1;
