--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,6 @@ a:hover {
 
 .row {
 	width: 890px;
-	margin-top: 15px;
 }
 
 .col-sm-4 {
@@ -57,6 +56,7 @@ a:hover {
 .col-sm-4 img {
 	display: block !important;
 	float: left !important;
+	width: 100% !important;
 }
 
 .col-sm-4 p {
@@ -85,6 +85,10 @@ a:hover {
 .col-sm-4:hover .info {
   bottom:0;
   opacity:1;
+}
+
+.row {
+	margin-top: 10px;
 }
 
 
